# FIPP

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Makefile  Readme.md  annotated.html  classes.html  conanfile.txt  dir_000000_000003.html  dir_000003_000001.html  dir_000005_000000.html  dir_000006_000000.html  dir_000007_000000.html  dir_48df6fbe689fc0d5bbff564f2388e9b1.html  dir_48df6fbe689fc0d5bbff564f2388e9b1_dep.map  dir_48df6fbe689fc0d5bbff564f2388e9b1_dep.md5  dir_64e7d18d8b93234153c66c919bd59ac0.html  dir_64e7d18d8b93234153c66c919bd59ac0_dep.map  dir_64e7d18d8b93234153c66c919bd59ac0_dep.md5  dir_6809241036a51487169f542583700d7e.html  dir_6809241036a51487169f542583700d7e_dep.map  dir_6809241036a51487169f542583700d7e_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_ac55354187c8c6c264902bc62bdefbb0.html  dir_ac55354187c8c6c264902bc62bdefbb0_dep.map  dir_ac55354187c8c6c264902bc62bdefbb0_dep.md5  dir_c0db2bf8e846a77356c096a5c6b04e29.html  dir_c9ec796a3a3b00824b17161876965e78.html  dir_c9ec796a3a3b00824b17161876965e78_dep.map  dir_c9ec796a3a3b00824b17161876965e78_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  (+34 more)
.devcontainer/: devcontainer.json
.github/action-scripts/: install-cuda-ubuntu.sh
.github/workflows/: build_cpp.yml  create_doxygen.yml
d0/d16/: classFIPP_1_1pipe_1_1IGenericSource__coll__graph.map  classFIPP_1_1pipe_1_1IGenericSource__coll__graph.md5
d0/d44/: GenericPluginSiSoWP_8hpp.html  GenericPluginSiSoWP_8hpp_source.html
d0/d78/: ImageContainer_8hpp__incl.map  ImageContainer_8hpp__incl.md5
d0/d88/: CentralController_8hpp_source.html
d0/d93/: classFIPP_1_1img_1_1ImageContainer.html
d0/df4/: classFIPP_1_1img_1_1ImageContainerCUDA__inherit__graph.map  classFIPP_1_1img_1_1ImageContainerCUDA__inherit__graph.md5
d1/d1d/: classFIPP_1_1img_1_1ImageContainerCUDA.html
d1/d23/: classFIPP_1_1img_1_1MetaDataNode.html
d1/d68/: classFIPP_1_1logging_1_1UnitTestLogger__inherit__graph.md5
d1/dc0/: ImageContainerCPU_8hpp_source.html
d1/dd9/: GenericSink_8hpp__incl.map  GenericSink_8hpp__incl.md5
d1/dfe/: IGenericSink_8hpp.html  IGenericSink_8hpp_source.html
d2/d1e/: FileLogger_8cpp__incl.map  FileLogger_8cpp__incl.md5
d2/d29/: structFIPP_1_1img_1_1e__Backend.html
d2/d45/: classFIPP_1_1img_1_1ImageContainerCPU__coll__graph.map  classFIPP_1_1img_1_1ImageContainerCPU__coll__graph.md5
d2/dda/: IGenericSource_8hpp.html  IGenericSource_8hpp_source.html
d3/d0a/: IGenericSink_8hpp__dep__incl.map  IGenericSink_8hpp__dep__incl.md5
d3/d4c/: Point_8hpp__incl.map  Point_8hpp__incl.md5
d3/d7d/: classFIPP_1_1img_1_1MetaDataMapNode__coll__graph.md5
d3/d9f/: classFIPP_1_1img_1_1ImageContainer__inherit__graph.map  classFIPP_1_1img_1_1ImageContainer__inherit__graph.md5
d3/da2/: classFIPP_1_1pipe_1_1GenericPlugin__coll__graph.map  classFIPP_1_1pipe_1_1GenericPlugin__coll__graph.md5
d3/da9/: classFIPP_1_1img_1_1MetaDataValueNodeGeneric__coll__graph.map  classFIPP_1_1img_1_1MetaDataValueNodeGeneric__coll__graph.md5
d4/d01/: classFIPP_1_1img_1_1ImagePool.html
d4/d1b/: classFIPP_1_1logging_1_1TestLogger__inherit__graph.map  classFIPP_1_1logging_1_1TestLogger__inherit__graph.md5
d4/d37/: classFIPP_1_1pipe_1_1IGenericPlugin.html
d4/d41/: classFIPP_1_1pipe_1_1GenericPluginSiSo.html
d4/d48/: structFIPP_1_1img_1_1NoFreeImageAvailableException__inherit__graph.map  structFIPP_1_1img_1_1NoFreeImageAvailableException__inherit__graph.md5
d4/d5e/: classFIPP_1_1pipe_1_1GenericSource__coll__graph.map  classFIPP_1_1pipe_1_1GenericSource__coll__graph.md5
d4/d76/: Point_8hpp.html  (+1 more)
doc/: Doxyfile  paste.txt
examples/: testExternalInput.yml  testPipeline copy.yml  testPipeline.yml  testPipelineCuda.yml
include/: PipelineBuilder.hpp  PipelineController.hpp  PluginBuilder.hpp  PluginCreator.hpp  Point.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+10 more)
src/: CMakeLists.txt  PipelineBuilder.cpp  PluginBuilder.cpp  PluginCreator.cpp
src/FIPP/: CMakeLists.txt  FIPP.cpp
src/ImageContainer/: CMakeLists.txt  ImageContainer.cpp  ImageContainer.hpp  ImageContainerCPU.cpp  ImageContainerCPU.hpp  ImageContainerCUDA.cpp  ImageContainerCUDA.hpp  ImageFormat.cpp  ImagePool.cpp  ImagePool.hpp  ImagePoolFactory.cpp  MetaDataSystem.cpp
src/ImageContainer/cmake/: ImageContainerConfig.cmake.in
src/Logging/: CMakeLists.txt  FileLogger.cpp  TestLogger.cpp  UnitTestLogger.cpp
src/Logging/cmake/: LoggingConfig.cmake.in
src/PipelineBuilder/: CMakeLists.txt  PipelineBuilder.cpp  PluginCreator.cpp
src/PipelineBuilder/cmake/: PipelineBuilderConfig.cmake.in
src/PipelineElements/: CMakeLists.txt  ExternalInput.cpp  GenericPipelineElement.cpp  GenericPipelineElementSiNo.cpp  GenericPipelineElementSiSo.cpp  GenericPipelineElementSink.cpp  GenericPlugin.cpp  GenericPluginSiSo.cpp  GenericPluginSiSoWP.cpp  GenericSink.cpp  GenericSinkSi.cpp  GenericSource.cpp  InputFilter.cpp
src/PipelineElements/cmake/: PipelineElementsConfig.cmake.in
src/Plugins/MetaDataLogger/: CMakeLists.txt  metaDataLogger.cpp
src/Point/: CMakeLists.txt  Point.cpp
src/Point/cmake/: PointConfig.cmake.in
src/include/: CentralController.hpp
src/include/ImageContainer/: ImageContainer.hpp  ImageFormat.hpp
src/include/PipelineElements/: GenericPipelineElement.hpp  GenericPipelineElementSiSo.hpp  IGenericPipelineElement.hpp
test/: CMakeLists.txt
(+200 files in other folders)
